fix: 更换ui组件库

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@quasar/extras": "^1.16.5",
+    "@varlet/ui": "^2.13.6",
     "axios": "^1.4.0",
     "es6-promise": "^4.2.8",
     "js-base64": "^3.7.5",
@@ -20,18 +20,19 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
-    "quasar": "^2.12.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.4.1",
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "mockjs": "^1.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.32.12",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.5",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
