--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "@amap/amap-jsapi-types": "0.0.13",
     "@varlet/ui": "^2.13.6",
     "axios": "^1.4.0",
     "es6-promise": "^4.2.8",
